# ParticleExplosion

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Particle.h  Screen.h  Swarm.h
src/: Particle.cpp  Screen.cpp  Swarm.cpp
